r0.8.2 (9.05.2017) - Release, dedicated to Victory Day.

   * Fix buffer overflow in real numbers output.
   * Real numbers output in the for of fixed or floating point.
     in order to use the shortest form.
   * Fix parsing of real numbers, now understands exponentioal form.
   * Optimisations and more configuration options  allow reducing
     code size.

r0.8.1 (28.04.2017) - Release, dedicated to my wedding anniversary
                      :).

   * Add deletion of the program lines by entering line number with
     empty string.
   * Add functions INT, SGN, CHR$.
   * Add string overflow errors (passes test 7 ANSI MINIMAL BASIC).
   * Add TAB argument exceptions (passes test 8 ANSI MINIMAL BASIC).
   * Optimisations, reducing FLASH/SRAM requirements. The smallest
     (and almost useless :) ) variant can be forced into Atmega 168...
   * Add string equality operator.
   * Add many condition compilation options.
   * Fix a couple of bugs.

r0.8.0 (12.04.2017) - Release, dedicated to International Day of
                      Human Space Flight.

   * Add support of modified TVout library to output to composite video
     and get 32x24 tv image and blinking cursor.
   * Add support of color highlighted output on HX8357B based 480x320
     TFT displays, using UTFT library.

   Language core:
   * Add CHAIN command, loading program from internal EEPROM, preserving
     the state (variables and arrays).
   * More flexible configuration helps save SRAM and FLASH
   * PRINT command accepts TAB construct, ';' symbol, empty strings and
     void print list. Passes first 6 tests from ANSI minimal basic test
     set.

   SDFS module:
   * Add DCHAIN command, loading program from SD file, preserving
     the state (variables and arrays).

r0.7.1 (22.03.2017) Fix bug with real arrays declaration Fix dependency
      on libarduinoemulator repo

r0.7 (19.03.2017) Fix integer constants parsing bug; Fix arithmetic