@@ -1113,6 +1113,7 @@
             <pElem>${ARDUINO_PATH}/hardware/arduino/avr/variants/eightanaloginputs</pElem>
             <pElem>${ARDUINO_PATH}/hardware/arduino/avr/libraries/SoftwareSerial/src</pElem>
             <pElem>${ARDUINO_PATH}/hardware/arduino/avr/libraries/EEPROM/src</pElem>
+            <pElem>${ARDUINO_PATH}/hardware/arduino/avr/libraries/Wire/src</pElem>
             <pElem>${ARDUINO_PATH}/libraries/TVoutfonts</pElem>
             <pElem>include</pElem>
             <pElem>../../libarduinoext/include</pElem>
